tests/ui/pattern/usefulness/empty-types.exhaustive_patterns.stderr
error: unreachable pattern
  --> $DIR/empty-types.rs:47:9
   |
LL |         _ => {}
   |         ^
   |
note: the lint level is defined here
  --> $DIR/empty-types.rs:13:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:50:9
   |
LL |         _x => {}
   |         ^^

error[E0004]: non-exhaustive patterns: type `&!` is non-empty
  --> $DIR/empty-types.rs:54:11
   |
LL |     match ref_never {}
   |           ^^^^^^^^^
   |
   = note: the matched value is of type `&!`
   = note: references are always considered inhabited
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match ref_never {
LL +         _ => todo!(),
LL +     }
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:62:9
   |
LL |         &_ => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:69:9
   |
LL |         (_, _) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:76:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:79:9
   |
LL |         (_, _) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:83:9
   |
LL |         _ => {}
   |         ^

error[E0004]: non-exhaustive patterns: `Ok(_)` not covered
  --> $DIR/empty-types.rs:87:11
   |
LL |     match res_u32_never {}
   |           ^^^^^^^^^^^^^ pattern `Ok(_)` not covered
   |
note: `Result<u32, !>` defined here
  --> $SRC_DIR/core/src/result.rs:LL:COL
  ::: $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Result<u32, !>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~     match res_u32_never {
LL +         Ok(_) => todo!(),
LL +     }
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:95:9
   |
LL |         Err(_) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:100:9
   |
LL |         Err(_) => {}
   |         ^^^^^^

error[E0004]: non-exhaustive patterns: `Ok(1_u32..=u32::MAX)` not covered
  --> $DIR/empty-types.rs:97:11
   |
LL |     match res_u32_never {
   |           ^^^^^^^^^^^^^ pattern `Ok(1_u32..=u32::MAX)` not covered
   |
note: `Result<u32, !>` defined here
  --> $SRC_DIR/core/src/result.rs:LL:COL
  ::: $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Result<u32, !>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Err(_) => {},
LL ~         Ok(1_u32..=u32::MAX) => todo!()
   |

error[E0005]: refutable pattern in local binding
  --> $DIR/empty-types.rs:104:9
   |
LL |     let Ok(_x) = res_u32_never.as_ref();
   |         ^^^^^^ pattern `Err(_)` not covered
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch18-02-refutability.html
   = note: the matched value is of type `Result<&u32, &!>`
help: you might want to use `let else` to handle the variant that isn't matched
   |
LL |     let Ok(_x) = res_u32_never.as_ref() else { todo!() };
   |                                         ++++++++++++++++

error: unreachable pattern
  --> $DIR/empty-types.rs:115:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:119:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:122:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:123:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:126:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:127:9
   |
LL |         Err(_) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:136:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:139:13
   |
LL |             _ if false => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:148:13
   |
LL |             Some(_) => {}
   |             ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:152:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:158:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:167:13
   |
LL |             Some(_) => {}
   |             ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:171:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:175:13
   |
LL |             _a => {}
   |             ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:180:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:185:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:204:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:209:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:214:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:219:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:225:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:234:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:239:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:245:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:251:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:256:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:262:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:268:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:284:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:287:9
   |
LL |         (_, _) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:290:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:291:9
   |
LL |         Err(_) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:296:9
   |
LL |         &_ => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:299:9
   |
LL |         Uninit { value: _ } => {}
   |         ^^^^^^^^^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: type `&[!]` is non-empty
  --> $DIR/empty-types.rs:323:11
   |
LL |     match slice_never {}
   |           ^^^^^^^^^^^
   |
   = note: the matched value is of type `&[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match slice_never {
LL +         _ => todo!(),
LL +     }
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:331:9
   |
LL |         [_] => {}
   |         ^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:332:9
   |
LL |         [_, _, ..] => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:337:9
   |
LL |         [_, _, _, ..] => {}
   |         ^^^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: `&[]` not covered
  --> $DIR/empty-types.rs:334:11
   |
LL |     match slice_never {
   |           ^^^^^^^^^^^ pattern `&[]` not covered
   |
   = note: the matched value is of type `&[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL |         [_, _, _, ..] => {}, &[] => todo!()
   |                            ++++++++++++++++

error: unreachable pattern
  --> $DIR/empty-types.rs:341:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:345:9
   |
LL |         _x => {}
   |         ^^

error[E0004]: non-exhaustive patterns: `&[]` not covered
  --> $DIR/empty-types.rs:347:11
   |
LL |     match slice_never {
   |           ^^^^^^^^^^^ pattern `&[]` not covered
   |
   = note: the matched value is of type `&[!]`
   = note: match arms with guards don't count towards exhaustivity
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         &[..] if false => {},
LL +         &[] => todo!()
   |

error[E0004]: non-exhaustive patterns: type `[!]` is non-empty
  --> $DIR/empty-types.rs:353:11
   |
LL |     match *slice_never {}
   |           ^^^^^^^^^^^^
   |
   = note: the matched value is of type `[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match *slice_never {
LL +         _ => todo!(),
LL +     }
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:363:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:366:9
   |
LL |         [_, _, _] => {}
   |         ^^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:369:9
   |
LL |         [_, ..] => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:375:9
   |
LL |         &[_, _, _] => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:379:9
   |
LL |         &[_x, _, _] => {}
   |         ^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: type `[!; 0]` is non-empty
  --> $DIR/empty-types.rs:383:11
   |
LL |     match array_0_never {}
   |           ^^^^^^^^^^^^^
   |
   = note: the matched value is of type `[!; 0]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match array_0_never {
LL +         _ => todo!(),
LL +     }
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:390:9
   |
LL |         _ => {}
   |         ^

error[E0004]: non-exhaustive patterns: `[]` not covered
  --> $DIR/empty-types.rs:392:11
   |
LL |     match array_0_never {
   |           ^^^^^^^^^^^^^ pattern `[]` not covered
   |
   = note: the matched value is of type `[!; 0]`
   = note: match arms with guards don't count towards exhaustivity
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         [..] if false => {},
LL +         [] => todo!()
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:411:9
   |
LL |         Some(_) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:416:9
   |
LL |         Some(_a) => {}
   |         ^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:421:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:426:9
   |
LL |         _a => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:436:9
   |
LL |         &_ => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:444:9
   |
LL |         &_a => {}
   |         ^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:453:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:458:9
   |
LL |         _a => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:463:9
   |
LL |         &_ => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:468:9
   |
LL |         &_a => {}
   |         ^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:475:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:479:9
   |
LL |         _a => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:485:9
   |
LL |         ref _a => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:494:9
   |
LL |         Some(_) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:499:9
   |
LL |         Some(_a) => {}
   |         ^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:504:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:509:9
   |
LL |         _a => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:514:14
   |
LL |         _a @ Some(_) => {}
   |              ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:521:9
   |
LL |         ref _a => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:526:18
   |
LL |         ref _a @ Some(_) => {}
   |                  ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:531:18
   |
LL |         ref _a @ Some(_b) => {}
   |                  ^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:538:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:542:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:544:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:549:9
   |
LL |         Ok(_a) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:553:9
   |
LL |         Ok(_a) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:555:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:559:9
   |
LL |         Ok(_a) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:561:9
   |
LL |         Err(_) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:569:9
   |
LL |         (_, _) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:573:9
   |
LL |         (_x, _) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:577:9
   |
LL |         (_, _x) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:581:9
   |
LL |         (0, _x) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:583:9
   |
LL |         (1.., _) => {}
   |         ^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:598:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:601:9
   |
LL |         _x => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:604:9
   |
LL |         _ if false => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:607:9
   |
LL |         _x if false => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:613:9
   |
LL |         _ if false => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:615:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:622:9
   |
LL |         _a if false => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:624:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:629:9
   |
LL |         _a if false => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:634:9
   |
LL |         &_a if false => {}
   |         ^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:641:9
   |
LL |         Ok(_x) if false => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:643:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:645:9
   |
LL |         Err(_) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:650:9
   |
LL |         (_, _x) if false => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:652:9
   |
LL |         (_, _) => {}
   |         ^^^^^^

error: aborting due to 113 previous errors

Some errors have detailed explanations: E0004, E0005.
For more information about an error, try `rustc --explain E0004`.
